package com.oneupproject.cupiggy.game


/**
 * BasicCreator
 *
 * Creatorの基底クラスですが、特に何もしません。
 *
 * @author y728n
 * @since 1.0.0
 */

abstract class BasicCreator